# vidcrop

./: README.md  pyproject.toml
vidcrop/: __init__.py  app.py
